# spellstore

./: .flake8  .gitignore  404.html  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: unit_tests.yml
docs/: index.md  quickstart.md
quickstart/: index.html
search/: search_index.json
spellbook/: base.py  cli.py  cli_get.py  feature_store.py  metadata.py
spellstore/: cli.py  cli_get.py  engine.py  util.py
tests/: basic.yml  test_base_sqlalchemy.py  test_feature_group.py  test_feature_group_view.py  test_feature_join.py  test_featurestore.py  test_get_metadata.py  test_spellbook.py
