[tool.poetry]
name = "spellbook"
version = "0.1.0"
description = ""
authors = ["CS <2498638+charliec443@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
SQLAlchemy = "^1.4.29"
pandas = "^1.3.5"
typer = "^0.4.0"
pydantic = "^1.9.0"
mypy = "^0.931"
PyYAML = "^6.0"
flake8 = "^4.0.1"
black = "^21.12b0"
isort = "^5.10.1"
tabulate = "^0.8.9"
tqdm = "^4.62.3"
types-PyYAML = "^6.0.3"
types-tabulate = "^0.8.5"
python-dotenv = "^0.19.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py37']
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | pb2.py
    | \.pyi
  )/
)
'''

[tool.isort]
multi_line_output=3
include_trailing_comma=true
use_parentheses=true
line_length=120

[tool.mypy]
ignore_missing_imports=true
